check autopick update

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,5 @@
 @use './mainApp';
 @use './Admin/adminApp';
 @use './ChampionsComponent/Champions';
+@use './ModalTemplate';
+@use './PlayersPage/ShortlistModal';
