--- a/client/src/App.css
+++ b/client/src/App.css
@@ -73,6 +73,11 @@
 .main-body .cursor-pointer {
   cursor: pointer;
 }
+.main-body .shortlist-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .main-body .component-nav-container {
   display: flex;
   justify-content: space-between;
@@ -1082,6 +1087,167 @@
 .competition-champs-name-entry {
   display: flex;
   flex-wrap: nowrap;
+}
+
+.modal-template-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  backdrop-filter: brightness(40%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-template-box {
+  background-color: #fff;
+  width: 800px;
+  border-radius: 4px;
+  box-shadow: black 0px 0px 0px 1px;
+  padding: 30px;
+  display: flex;
+  flex-flow: column;
+  margin-bottom: 15vh;
+  overflow: hidden;
+}
+
+.modal-template-content {
+  max-height: calc(80vh - 135px);
+}
+
+.modal-template-logo-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.modal-template-logo-placeholder {
+  width: 40px;
+}
+
+.modal-template-logo {
+  width: 150px;
+}
+
+.modal-template-title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  color: black;
+}
+
+.modal-template-close-icon {
+  font-size: 2.5rem;
+  color: #777;
+  cursor: pointer;
+}
+.modal-template-close-icon:hover {
+  transition: all 0.3s ease;
+  transform: scale(1.03);
+}
+
+.modal-template-header-container {
+  margin-bottom: 20px;
+}
+
+.modal-template-heading {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.modal-template-sub-heading {
+  font-size: 18px;
+}
+
+.modal-template-caption-container {
+  margin-bottom: 30px;
+}
+
+.modal-template-caption {
+  margin-bottom: 10px;
+  line-height: 1.6;
+}
+
+.modal-template-footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-template-footer-button {
+  text-align: center;
+  padding: 10px 15px;
+  margin: 0 10px;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  background-color: blue;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.modal-template-footer-button:hover {
+  transition: all 0.3s ease;
+  transform: scale(1.03);
+}
+
+.shortlist-body-container {
+  margin-bottom: 30px;
+}
+
+.shortlist-modal-footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shortlist-auto-pick-checkbox {
+  margin-right: 15px;
+}
+
+.shortlist-auto-pick-label {
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.shortlist-close-button {
+  width: 150px;
+  text-align: center;
+  padding: 10px 15px;
+  margin: 0 10px;
+  font-weight: 500;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #999;
+  cursor: pointer;
+}
+
+.shortlist-save-auto-pick-button {
+  width: 150px;
+  text-align: center;
+  padding: 10px 15px;
+  margin: 0 10px;
+  font-weight: 500;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  background-color: green;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=App.css.map */
