add player ids to shortlist working

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1202,8 +1202,10 @@
   transform: scale(1.03);
 }
 
-.shortlist-body-container {
+.shortlist-add-player-container {
   margin-bottom: 30px;
+  display: flex;
+  align-items: center;
 }
 
 .shortlist-modal-footer-container {
@@ -1223,6 +1225,8 @@
 }
 
 .shortlist-close-button {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
   width: 150px;
   text-align: center;
   padding: 10px 15px;
@@ -1237,6 +1241,8 @@
 }
 
 .shortlist-save-auto-pick-button {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
   width: 150px;
   text-align: center;
   padding: 10px 15px;
