player shortlist on player page done untested

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,3 +3,8 @@
 @use './ChampionsComponent/Champions';
 @use './ModalTemplate';
 @use './PlayersPage/ShortlistModal';
+
+.overflow-hidden {
+  height: 100vh;
+  overflow: hidden;
+}
