--- a/client/src/App.css
+++ b/client/src/App.css
@@ -316,6 +316,18 @@
 .main-body .draft-container::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+.main-body .vidiprinter-big::-webkit-scrollbar {
+  height: 8px;
+}
+.main-body .vidiprinter-big::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.main-body .vidiprinter-big::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.main-body .vidiprinter-big::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 .main-body .draft-footer {
   width: 80%;
   height: 100px;
