shortlist modal height fix

--- a/client/src/_ModalTemplate.scss
+++ b/client/src/_ModalTemplate.scss
@@ -29,7 +29,7 @@
 }
 
 .modal-template-content {
-  max-height: calc(80vh - 135px);
+  // max-height: calc(80vh - 135px);
 }
 
 .modal-template-logo-container {
