--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1402,16 +1402,17 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .ss-my-players-container {
   width: 40%;
-  height: 300px;
+  height: 400px;
   border-radius: 8px;
   border: 2px solid #fabc91;
 }
 
-.ss-my-players-title {
+.ss-title {
   font-family: "Oswald", sans-serif;
   width: 100%;
   text-align: center;
@@ -1419,13 +1420,7 @@
   margin: 10px 0;
 }
 
-.ss-my-shortlist {
-  width: 55%;
-  height: 300px;
-  background-color: blue;
-}
-
-.ss-my-players-list-container {
+.ss-list-container {
   padding: 0 15px;
   overflow-y: scroll;
   max-height: calc(100% - 70px);
@@ -1438,19 +1433,40 @@
   margin-bottom: 10px;
 }
 
-.ss-my-players-player-name {
+.ss-player-name {
   flex-grow: 2;
   margin-left: 5px;
   font-size: 16px;
   font-weight: 500;
 }
 
-.ss-my-players-button {
+.ss-index {
+  margin: 0 5px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.ss-shortlist-detail {
+  width: 85px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.ss-shortlist-name {
+  width: 150px;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0 20px 0 10px;
+}
+
+.ss-button {
   padding: 5px 10px;
 }
 
 /* CSS */
-.ss-my-players-button {
+.ss-button {
   appearance: none;
   border: 1px solid rgba(27, 31, 35, 0.15);
   border-radius: 6px;
@@ -1470,34 +1486,87 @@
   white-space: nowrap;
 }
 
-.ss-my-players-keep {
+.ss-button-keep {
   background-color: #2ea44f;
   margin-right: 10px;
 }
 
-.ss-my-players-keep:hover {
+.ss-button-keep:hover {
   background-color: #2c974b;
 }
 
-.ss-my-players-discard {
+.ss-button-discard {
   background-color: #f01c15;
 }
 
-.ss-my-players-discard:hover {
+.ss-button-discard:hover {
   background-color: #c52620;
 }
 
-.ss-my-players-button-keep-disabled {
+.ss-button-keep-disabled {
   background-color: #999;
   border-color: rgba(27, 31, 35, 0.1);
   color: rgba(255, 255, 255, 0.8);
   margin-right: 10px;
 }
 
-.ss-my-players-button-discard-disabled {
+.ss-button-discard-disabled {
   background-color: #999;
   border-color: rgba(27, 31, 35, 0.1);
   color: rgba(255, 255, 255, 0.8);
+}
+
+.ss-my-shortlist-container {
+  width: 55%;
+  height: 400px;
+  border-radius: 8px;
+  border: 2px solid #fabc91;
+}
+
+.ss-my-shortlist-entry {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.ss-headers {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #dd6d1f;
+}
+
+.ss-player-list {
+  width: 100%;
+  border-radius: 8px;
+  border: 2px solid #fabc91;
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+}
+
+.ss-players-data {
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+}
+
+.ss-add-player-container {
+  display: flex;
+  justify-content: center;
+}
+
+.ss-number-input {
+  width: 50px;
+  margin: 0 10px;
+}
+
+.ss-loader-container {
+  display: flex;
+  justify-content: center;
 }
 
 .overflow-hidden {
