--- a/client/src/SemiShortlistPage/_SemiShortlistPage.scss
+++ b/client/src/SemiShortlistPage/_SemiShortlistPage.scss
@@ -137,7 +137,8 @@
   font-weight: 500;
   font-size: 16px;
   margin-bottom: 10px;
-  color: #dd6d1f
+  color: #dd6d1f;
+  cursor: pointer;
 }
 
 .ss-player-list {
