--- a/client/src/_mainApp.scss
+++ b/client/src/_mainApp.scss
@@ -36,6 +36,10 @@
     min-height: 30px;
   }
 
+  .landing-page-container {
+    overflow-x: hidden;
+  }
+
   .shortlist-page-input-container {
     width: 300px;
   }
