--- a/client/src/App.css
+++ b/client/src/App.css
@@ -241,6 +241,28 @@
   margin: auto;
   padding: 5px 0;
 }
+.main-body .draft-desktop-left-container {
+  display: flex;
+}
+.main-body .desktop-draft-shortlist-pick-button {
+  text-transform: uppercase;
+  border-radius: 4px;
+  margin-left: 15px;
+  border: none;
+  background-color: #dd6d1f;
+  font-family: "Oswald", sans-serif;
+  padding: 0 10px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.main-body .desktop-draft-shortlist-pick-button:hover {
+  transform: scale(1.05);
+}
+.main-body .auto-pick-button {
+  background-color: red;
+}
 .main-body .include-button {
   font-family: "Oswald", sans-serif;
   font-size: 18px;
