--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,7 @@
 @use './ModalTemplate';
 @use './PlayersPage/ShortlistModal';
 @use './SemiShortlistPage/SemiShortlistPage';
+@use './ShortlistPage/ShortlistPage';
 
 .overflow-hidden {
   height: 100vh;
