shortlist pick modal update

--- a/client/src/ShortlistPage/_ShortlistPage.scss
+++ b/client/src/ShortlistPage/_ShortlistPage.scss
@@ -87,3 +87,12 @@
 .shortlist-remove:hover {
   background-color: #c52620;
 }
+
+.sp-checkbox-wrapper {
+  padding-left: 1rem;
+}
+
+.sp-settings-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
