shortlist pick modal update

--- a/client/src/TheDraftPage/_ShortlistPickModal.scss
+++ b/client/src/TheDraftPage/_ShortlistPickModal.scss
@@ -24,4 +24,12 @@
 
 .spm-player-detail {
   text-align: center;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.spm-select-icon {
+  width: 20px;
+  padding-bottom: 5px;
+  cursor: pointer;
 }
