draft auto pick button update

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -261,7 +261,17 @@
   transform: scale(1.05);
 }
 .main-body .auto-pick-button {
+  border: 3px solid red;
   background-color: red;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.main-body .auto-pick-button2 {
+  color: red;
+  background-color: #fff;
+  border: 3px solid red;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 .main-body .include-button {
   font-family: "Oswald", sans-serif;
@@ -1727,7 +1737,67 @@
 .spm-select-icon {
   width: 20px;
   padding-bottom: 5px;
+}
+
+.apm-warning {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: red;
+  margin-bottom: 2rem;
+}
+
+.apm-player-wrapper {
+  width: 100%;
+}
+
+.apm-button-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.apm-pick-caption {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.apm-cancel-btn {
+  text-transform: uppercase;
+  border-radius: 4px;
+  margin-right: 1rem;
+  border: none;
+  background-color: #999;
+  font-family: "Oswald", sans-serif;
+  padding: 10px 20px;
+  font-size: 1.25rem;
+  color: #fff;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+.apm-cancel-btn:hover {
+  transform: scale(1.05);
+}
+
+.apm-pick-btn {
+  text-transform: uppercase;
+  border-radius: 4px;
+  margin-right: 1rem;
+  border: none;
+  background-color: green;
+  font-family: "Oswald", sans-serif;
+  padding: 10px 20px;
+  font-size: 1.25rem;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.apm-pick-btn:hover {
+  transform: scale(1.05);
 }
 
 .overflow-hidden {
