--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,6 +29,11 @@
   font-weight: 600;
   min-height: 30px;
 }
+.main-body .draft-players-container {
+  max-height: calc(100vh - 270px);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
 .main-body .landing-page-container {
   overflow-x: hidden;
 }
@@ -245,6 +250,7 @@
   display: flex;
 }
 .main-body .desktop-draft-shortlist-pick-button {
+  display: none;
   text-transform: uppercase;
   border-radius: 4px;
   margin-left: 15px;
@@ -340,7 +346,6 @@
 .main-body .draft-container {
   overflow-y: auto;
   overflow-x: hidden;
-  padding-bottom: 100px;
 }
 .main-body .draft-container::-webkit-scrollbar {
   width: 3px;
@@ -654,6 +659,12 @@
   .main-body .disappear-desktop {
     display: none;
   }
+  .main-body .desktop-draft-shortlist-pick-button {
+    display: block;
+  }
+  .main-body .draft-players-container {
+    padding-bottom: 60px;
+  }
 }
 @media only screen and (max-width: 650px) {
   .main-body .finals-team-name {
@@ -692,6 +703,9 @@
 @media only screen and (min-width: 651px) {
   .main-body .disappear-medium2 {
     display: none;
+  }
+  .main-body .draft-players-container {
+    max-height: calc(100vh - 320px);
   }
 }
 @media only screen and (max-width: 570px) {
@@ -737,6 +751,14 @@
   }
   .main-body .players-title {
     margin: 10px 0;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .main-body .desktop-draft-shortlist-pick-button {
+    display: block;
+  }
+  .main-body .draft-players-container {
+    max-height: calc(100vh - 316px);
   }
 }
 
@@ -1161,8 +1183,8 @@
   left: 0;
   top: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
   backdrop-filter: brightness(40%);
   display: flex;
@@ -1702,6 +1724,38 @@
 .sp-settings-wrapper {
   display: flex;
   justify-content: flex-end;
+}
+
+.slp-clear-btn {
+  background-color: #f01c15;
+  margin-left: 1rem;
+  appearance: none;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.1) 0 1px 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 8px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-transform: uppercase;
+}
+
+.slp-clear-btn:hover {
+  background-color: #c52620;
+}
+
+.slp-search-clear-wrapper {
+  display: flex;
+  align-items: center;
 }
 
 .spm-container {
