--- a/client/src/ShortlistPage/_ShortlistPage.scss
+++ b/client/src/ShortlistPage/_ShortlistPage.scss
@@ -96,3 +96,35 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.slp-clear-btn {
+  background-color: #f01c15;
+  margin-left: 1rem;
+  appearance: none;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.1) 0 1px 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 8px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-transform: uppercase;
+}
+
+.slp-clear-btn:hover {
+  background-color: #c52620;
+}
+
+.slp-search-clear-wrapper {
+  display: flex;
+  align-items: center;
+}
