--- a/client/src/_ModalTemplate.scss
+++ b/client/src/_ModalTemplate.scss
@@ -4,8 +4,8 @@
   left: 0;
   top: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
   backdrop-filter: brightness(40%);
   display: flex;
