--- a/client/src/_mainApp.scss
+++ b/client/src/_mainApp.scss
@@ -36,6 +36,12 @@
     min-height: 30px;
   }
 
+  .draft-players-container {
+    max-height: calc(100vh - 270px);
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
   .landing-page-container {
     overflow-x: hidden;
   }
@@ -301,6 +307,7 @@
   }
 
   .desktop-draft-shortlist-pick-button {
+    display: none;
     text-transform: uppercase;
     border-radius: 4px;
     margin-left: 15px;
@@ -411,7 +418,6 @@
   .draft-container {
     overflow-y: auto;
     overflow-x: hidden;
-    padding-bottom: 100px;
   }
 
   .draft-container::-webkit-scrollbar {
@@ -768,6 +774,14 @@
     .disappear-desktop {
       display: none;
     }
+    .desktop-draft-shortlist-pick-button {
+      display: block;
+    }
+    .draft-players-container {
+      // max-height: calc(100vh - 600px);
+      // background-color: red;
+      padding-bottom: 60px;
+    }
   }
 
   @media only screen and (max-width: 650px) {
@@ -808,6 +822,9 @@
   @media only screen and (min-width: 651px) {
     .disappear-medium2 {
       display: none;
+    }
+    .draft-players-container {
+      max-height: calc(100vh - 320px);
     }
   }
 
@@ -855,6 +872,15 @@
     }
     .players-title {
       margin: 10px 0;
+    }
+  }
+
+  @media only screen and (min-width: 900px) {
+    .desktop-draft-shortlist-pick-button {
+      display: block;
+    }
+    .draft-players-container {
+      max-height: calc(100vh - 316px);
     }
   }
 }
