--- a/client/src/_mainApp.scss
+++ b/client/src/_mainApp.scss
@@ -36,6 +36,11 @@
     min-height: 30px;
   }
 
+  .auto-pick-button-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
   .draft-players-container {
     max-height: calc(100vh - 270px);
     overflow-x: hidden;
