final 2023 start update

--- a/client/src/ShortlistPage/_ShortlistPage.scss
+++ b/client/src/ShortlistPage/_ShortlistPage.scss
@@ -215,3 +215,9 @@
 .slp-green:hover {
   background-color: #2c974b;
 }
+
+.shortlist-page-auto-modal-empty-caption {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
+}
