--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1846,6 +1846,12 @@
   background-color: #2c974b;
 }
 
+.shortlist-page-auto-modal-empty-caption {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
+}
+
 .spm-container {
   width: 100%;
   height: 300px;
