transfer page update

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,7 @@
 @use './PlayersPage/ShortlistModal';
 @use './SemiShortlistPage/SemiShortlistPage';
 @use './ShortlistPage/ShortlistPage';
+@use './TransfersPage/TransfersPage';
 @use './TheDraftPage/ShortlistPickModal';
 @use './TheDraftPage/AutoPickModal';
 
