--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1852,6 +1852,147 @@
   margin-bottom: 1rem;
 }
 
+.tp-main-container {
+  padding: 2rem 0;
+}
+
+.tp-player-select-container {
+  margin-bottom: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tp-player-select-form-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.tp-player-out-label {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5rem;
+  margin-right: 1rem;
+}
+
+.tp-conditional-content-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.tp-hidden-content-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(5px);
+}
+
+.tp-select-player-overlay-caption {
+  font-family: "Oswald", sans-serif;
+}
+
+.tp-selected-player-caption {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5rem;
+  margin-right: 1rem;
+  margin-bottom: 3px;
+}
+
+.tp-selected-player-name {
+  color: #dd6d1f;
+}
+
+.tp-change-btn {
+  background-color: #dd6d1f;
+  appearance: none;
+  border: 1px solid #dd6d1f;
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.1) 0 1px 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 8px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-transform: uppercase;
+}
+
+.tp-change-btn:hover {
+  background-color: #fff;
+  color: #dd6d1f;
+}
+
+.tp-ap-container {
+  width: calc(50% - 10px);
+  height: calc(100vh - 4rem);
+  padding: 0 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tp-ap-heading {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.tp-ap-table {
+  border: 2px solid #fabc91;
+  border-radius: 8px;
+  position: relative;
+  width: 100%;
+  flex-grow: 2;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.tp-headers-wrapper {
+  display: flex;
+  border-bottom: 2px solid #fabc91;
+  margin-bottom: 1rem;
+}
+
+.tp-ap-header {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.125rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.tp-ap-players-list-wrapper {
+  overflow: auto;
+  flex-grow: 2;
+  position: relative;
+}
+
+.tp-ap-players-list {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .spm-container {
   width: 100%;
   height: 300px;
